Add job notifiers endpoint + update openapi schema
